k8s/composition-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: composition-service
spec:
  selector:
    app: composition-service
  ports:
    - protocol: TCP
      port: 3013
      targetPort: 3013
  type: ClusterIP
