k8s/harvard-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: harvard-adapter
spec:
  selector:
    app: harvard-adapter
  ports:
    - protocol: TCP
      port: 3011
      targetPort: 3011
  type: ClusterIP
