k8s/met-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: met-adapter
spec:
  selector:
    app: met-adapter
  ports:
    - protocol: TCP
      port: 3012
      targetPort: 3012
  type: ClusterIP
