k8s/museum-proxy-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: museum-proxy-service
spec:
  selector:
    app: museum-proxy-service
  ports:
    - protocol: TCP
      port: 3010
      targetPort: 3010
  type: ClusterIP
